updated angular url

--- a/app/html/log.html
+++ b/app/html/log.html
@@ -3,7 +3,7 @@
 <head>
     <title>Prepros Log</title>
     <script src="../scripts/libraries/jquery.min.js"></script>
-    <script src="../scripts/libraries/angular.min.js"></script>
+    <script src="../scripts/libraries/angular.js"></script>
 
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
