--- a/app/html/notification.html
+++ b/app/html/notification.html
@@ -4,7 +4,7 @@
     <title>Notification</title>
     <script src="../scripts/libraries/jquery.min.js"></script>
     <script src="../scripts/libraries/underscore.min.js"></script>
-    <script src="../scripts/libraries/angular.min.js"></script>
+    <script src="../scripts/libraries/angular.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
         function NotificationCtrl($scope){
