--- a/app/html/options.html
+++ b/app/html/options.html
@@ -4,7 +4,7 @@
     <title>Prepros Options</title>
 
     <script src="../scripts/libraries/jquery.min.js"></script>
-    <script src="../scripts/libraries/angular.min.js"></script>
+    <script src="../scripts/libraries/angular.js"></script>
     <script src="../scripts/libraries/bootstrap.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
