--- a/app/app.html
+++ b/app/app.html
@@ -1,14 +1,3 @@
-<!--
-
-/**
- * Prepros
- * (c) Subash Pathak
- * sbshpthk@gmail.com
- * License: MIT
- */
-
- -->
-
 <!doctype html>
 <html>
 <head>
@@ -37,62 +26,25 @@
     <script src="scripts/load.js"></script>
 
 </head>
-<body class="wrapper clearfix" ng-controller="MainCtrl" x-drag-drop-project x-bind-keyboard-shortcuts>
 
-<!-- Sidebar -->
-<div class="sidebar" ng-controller="SidebarCtrl">
-    <ul>
-        <li ng-repeat="project in projects" ng-dblclick="openProjectFolder(project.path)">
-            <a ng-href="#/files/{{project.id}}" draggable="false"
-               ng-class="{'active' : selectedProject.id == project.id}">{{project.name}}</a>
-        </li>
-    </ul>
+<body class="clearfix" ng-controller="MainCtrl" drop-project keyboard-shortcuts>
 
-    <div class="controls" ng-class="{'show' : selectedProject.id}">
-        <div class="new-project icomoon-plus icons" x-tooltip="Add new project" ng-click="addProject()"></div>
-        <div class="refresh icomoon-spinner-2 icons" x-tooltip="Refresh Files" ng-click="refreshFiles()"></div>
-        <div class="options icomoon-cog icons" x-tooltip="Project Options" x-show-modal-on-click="#optionsModal"></div>
-        <div class="open icomoon-globe icons" x-tooltip="Open project live url" ng-click="openLiveUrl()"></div>
-        <div class="remove icomoon-remove icons" x-tooltip="Remove project" ng-click="removeProject()"></div>
-    </div>
+<div class="wrapper">
 
-</div>
-<!-- Sidebar ends -->
+    <!-- Sidebar -->
+    <div ng-include src="'templates/sidebar.html'"></div>
 
+    <div class="main">
 
-<div class="main">
+        <!-- App title bar -->
+        <div ng-include src="'templates/title-bar.html'"></div>
 
-    <!-- App title bar -->
-    <div class="title-bar" ng-controller="TitlebarCtrl">
-        <div class="controls">
-            <a ng-click="goWebsite()" class="icomoon-gift highlight" x-tooltip="A New Version Of Prepros is Available"
-               data-placement="bottom" ng-show="appUpdate"></a>
-            <a ng-href="#/home" class="icomoon-home" x-tooltip="Go to home" data-placement="bottom" tabindex="-1"></a>
-            <a class="love icomoon-heart-2" x-tooltip="Help the author" data-placement="bottom"
-               ng-click="supportAuthor()"></a>
-            <a class="about icomoon-info " x-tooltip="About Prepros" data-placement="bottom"
-               x-show-modal-on-click="#aboutModal"></a>
-            <a class="about icomoon-question " x-tooltip="Help" data-placement="bottom" ng-click="help()"></a>
-            <a class="log icomoon-copy-2" x-tooltip="App Log" data-placement="bottom" ng-click="openLogWindow()"
-               x-log-element></a>
-            <a class="options icomoon-cog " x-tooltip="App Options" data-placement="bottom"
-               ng-click="openOptionsWindow()"></a>
-            <a class="to-tray icomoon-arrow-down-right-3" x-tooltip="Minimize to Tray" data-placement="bottom"
-               ng-click="toTray()"></a>
-            <a class="minimize-app icomoon-minus" x-tooltip="Minimize" data-placement="bottom"
-               ng-click="minimize()"></a>
-            <a class="close-app icomoon-close" x-tooltip="Close" data-placement="left" ng-click="close()"></a>
-        </div>
-    </div>
+        <!--File list and project view -->
+        <div class="content-wrap clearfix" ng-controller="FilesCtrl"  ng-class="{'show-options' : selectedFile.id}">
 
-    <!--File list and project view -->
-    <div class="content clearfix" ng-controller="FilesCtrl">
+            <div class="content clearfix show-options">
 
-        <div class="content-wrap clearfix" ng-class="{'show-options' : selectedFile.id}">
-
-            <div ng-switch on="routePath">
-
-                <div ng-switch-when="home" class="home">
+                <div ng-if="path == 'home'" class="home">
 
                     <h1 class="icomoon-arrow-down-2"></h1>
 
@@ -100,13 +52,13 @@
 
                 </div>
 
-                <div ng-switch-when="files">
+                <div ng-if="path == 'files'">
 
                     <!-- Files list -->
-                    <div ng-include src="'templates/files-list.html'"></div>
+                    <div ng-include src="'templates/files-list.html'" ng-if="selectedProjectFiles.length != 0"></div>
 
                     <!-- There are no files -->
-                    <div class="no-files" ng-show="selectedProjectFiles.length == 0">
+                    <div class="no-files" ng-if="selectedProjectFiles.length == 0">
 
                         <h1 class="icomoon-sad"></h1>
 
@@ -115,7 +67,7 @@
                     </div>
 
                     <!-- Options -->
-                    <div class="options">
+                    <div class="options" ng-if="selectedFile.id" ng-animate="'slide'">
 
                         <span class="file-type">{{selectedFile.type}}</span>
 
@@ -127,17 +79,25 @@
                         </label>
 
                         <!-- Load options template -->
-                        <div ng-if="selectedFile.type" ng-include
-                             src="'templates/fileTypes/' + selectedFile.type + '.html'"></div>
+                        <div ng-include src="'templates/fileTypes/' + selectedFile.type + '.html'"></div>
 
-                        <button class="compile" ng-click="compile()">Compile</button>
+                        <button class="compile prepros-button" ng-click="compile()">Compile</button>
 
                     </div>
                 </div>
+
+                <div ng-if="path == 'log'">
+
+                    <div ng-include src="'templates/log.html'"></div>
+
+                </div>
             </div>
+
         </div>
+
     </div>
 </div>
+
 
 <!-- Include Modal Windows -->
 <div ng-include src="'templates/project-options.html'"></div>
