--- a/app/html/notification.html
+++ b/app/html/notification.html
@@ -19,7 +19,7 @@
             $scope.notification = global.preprosNotification;
 
             $scope.openLog = function(){
-                global.logElement.trigger('click');
+                global.showLog();
             };
 
             $scope.close= function(e){
