show window after the app is ready

--- a/app/app.html
+++ b/app/app.html
@@ -29,7 +29,7 @@
 
 <body class="clearfix" ng-controller="MainCtrl" drop-project keyboard-shortcuts>
 
-<div class="wrapper">
+<div class="wrapper" ng-cloak>
 
     <!-- Sidebar -->
     <div ng-include src="'templates/sidebar.html'"></div>
