--- a/app/html/options.html
+++ b/app/html/options.html
@@ -98,6 +98,10 @@
         <input type="text" ng-model="userConfig.jsPath">
     </label>
     <label>
+        <span class="label-desc label-block">Minified Javascripts Folder</span>
+        <input type="text" ng-model="userConfig.jsMinPath" class="span4"><br>
+    </label>
+    <label>
         <span class="label-desc label-block">Html Folder</span><br>
         <input type="text" ng-model="userConfig.htmlPath">
     </label>
