added ng-cloak styles

--- a/app/app.html
+++ b/app/app.html
@@ -15,6 +15,13 @@
 
     </script>
 
+    <style>
+        [ng-cloak] {
+            display: none;
+            opacity: 0;
+        }
+    </style>
+
     <!--Load App styles -->
     <link href="assets/css/style.css" rel="stylesheet">
 
