--- a/app/app.html
+++ b/app/app.html
@@ -109,6 +109,7 @@
 <!-- Include Modal Windows -->
 <div ng-include src="'templates/project-options.html'"></div>
 <div ng-include src="'templates/about.html'"></div>
+<div ng-include src="'templates/multi-device-testing.html'"></div>
 
 
 </body>
