--- a/app/html/options.html
+++ b/app/html/options.html
@@ -78,8 +78,8 @@
         <span class="label-desc">Enable Success Notifications</span>
     </label>
     <label>
-        <span class="label-desc label-block">Exclude files that contain following patterns</span><br>
-        <span class="muted label-block">Please enter comma separated list</span><br>
+        <span class="label-desc label-block">Exclude files that contain following patterns</span>
+        <span class="muted label-block">Please enter comma separated list</span>
         <input type="text" ng-model="userConfig.filterPatterns">
     </label>
     <label label-block>
@@ -90,19 +90,19 @@
 <div data-title="Folders">
 
     <label>
-        <span class="label-desc label-block">CSS Folder</span><br>
+        <span class="label-desc label-block">CSS Folder</span>
         <input type="text" ng-model="userConfig.cssPath">
     </label>
     <label>
-        <span class="label-desc label-block">JavaScripts Folder</span><br>
+        <span class="label-desc label-block">JavaScripts Folder</span>
         <input type="text" ng-model="userConfig.jsPath">
     </label>
     <label>
         <span class="label-desc label-block">Minified Javascripts Folder</span>
-        <input type="text" ng-model="userConfig.jsMinPath" class="span4"><br>
+        <input type="text" ng-model="userConfig.jsMinPath" class="span4">
     </label>
     <label>
-        <span class="label-desc label-block">Html Folder</span><br>
+        <span class="label-desc label-block">Html Folder</span>
         <input type="text" ng-model="userConfig.htmlPath">
     </label>
 
