--- a/app/html/options.html
+++ b/app/html/options.html
@@ -99,7 +99,7 @@
     </label>
     <label>
         <span class="label-desc label-block">Minified Javascripts Folder</span>
-        <input type="text" ng-model="userConfig.jsMinPath" class="span4">
+        <input type="text" ng-model="userConfig.jsMinPath">
     </label>
     <label>
         <span class="label-desc label-block">Html Folder</span>
