fixed some copy paste errors

--- a/app/html/options.html
+++ b/app/html/options.html
@@ -216,7 +216,7 @@
         <span class="label-desc">Auto Compile</span>
     </label>
     <label>
-        <input type="checkbox" ng-model="userConfig.sass.useCustomRuby">
+        <input type="checkbox" ng-model="userConfig.haml.useCustomRuby">
         <span class="label-desc">Use Custom Ruby</span>
     </label>
     <label>
@@ -246,7 +246,7 @@
         <span class="label-desc">Auto Compile</span>
     </label>
     <label>
-        <input type="checkbox" ng-model="userConfig.sass.useCustomRuby">
+        <input type="checkbox" ng-model="userConfig.slim.useCustomRuby">
         <span class="label-desc">Use Custom Ruby</span>
     </label>
     <label>
