--- a/app/html/options.html
+++ b/app/html/options.html
@@ -26,7 +26,7 @@
 
                 var html = $(e.currentTarget).html();
 
-                fs.remove(global.preprosConfig.cachePath, function (err) {
+                fs.remove(global.cachePath, function (err) {
 
                     if (!err) {
 
