fixed type error and copy to clipboard feature

--- a/app/app.html
+++ b/app/app.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body class="clearfix" ng-controller="MainCtrl" drop-project keyboard-shortcuts>
+<body class="clearfix" ng-controller="MainCtrl" drop-project keyboard-shortcuts copy-selected-text>
 
 <div class="wrapper" ng-cloak>
 
