adjust directory structure

--- a/application/app/app.html
+++ b/application/app/app.html
@@ -26,7 +26,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Scripts loader -->
-    <script src="scripts/libraries/LAB.min.js"></script>
+    <script src="vendor/LAB.min.js"></script>
 
     <!--Load custom script -->
     <script src="scripts/frame.js"></script>
