--- a/application/app/html/options.html
+++ b/application/app/html/options.html
@@ -4,9 +4,9 @@
 <head>
     <title>Prepros Options</title>
 
-    <script src="../scripts/libraries/jquery.min.js"></script>
-    <script src="../scripts/libraries/angular.js"></script>
-    <script src="../scripts/libraries/bootstrap.min.js"></script>
+    <script src="../vendor/jquery.min.js"></script>
+    <script src="../vendor/angular.js"></script>
+    <script src="../vendor/bootstrap.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
 
