fixed some copy paste errors in jade options

--- a/application/app/html/options.html
+++ b/application/app/html/options.html
@@ -196,20 +196,12 @@
 <div data-title="Jade">
 
     <label>
-        <input type="checkbox" ng-model="userConfig.stylus.autoCompile">
+        <input type="checkbox" ng-model="userConfig.jade.autoCompile">
         <span class="label-desc">Auto Compile</span>
     </label>
     <label>
-        <input type="checkbox" ng-model="userConfig.stylus.lineNumbers">
-        <span class="label-desc">Line numbers</span>
-    </label>
-    <label>
-        <input type="checkbox" ng-model="userConfig.stylus.compress">
-        <span class="label-desc">Compress CSS</span>
-    </label>
-    <label>
-        <input type="checkbox" ng-model="userConfig.stylus.config.nib">
-        <span class="label-desc">Use Nib</span>
+        <input type="checkbox" ng-model="userConfig.jade.pretty">
+        <span class="label-desc">Pretty</span>
     </label>
 
 </div>
