--- a/application/app/html/notification.html
+++ b/application/app/html/notification.html
@@ -53,7 +53,7 @@
                 } else {
 
                     nWin.show();
-
+                    nWin.blur();
                 }
             });
         }
