Added Support for LiveScript, Fixed Notification Window scrollbar on OSX & Removed Taskbar Title for OSX (Standard)

--- a/application/app/html/notification.html
+++ b/application/app/html/notification.html
@@ -59,7 +59,7 @@
         }
     </script>
 </head>
-<body>
+<body class="notif-window">
 
 <div ng-controller="NotificationCtrl" class="preprosNotification" ng-click="openLog()">
     <div class="notif-container {{notification.type}}">
