--- a/application/app/html/options.html
+++ b/application/app/html/options.html
@@ -330,6 +330,13 @@
     </label>
 </div>
 
+<div data-title="Image Optimisation">
+    <label>
+        <input type="checkbox" ng-model="userConfig.image.autoCompile">
+        <span class="label-desc">Auto Optimize</span>
+    </label>
+</div>
+
 <div data-title="Advanced">
 
     <label>
