updated main and options window styles and work also started on image optimization.

--- a/application/app/app.html
+++ b/application/app/app.html
@@ -110,6 +110,7 @@
 <div ng-include src="'templates/project-options.html'"></div>
 <div ng-include src="'templates/about.html'"></div>
 <div ng-include src="'templates/multi-device.html'"></div>
+<div ng-include src="'templates/optim-image.html'"></div>
 
 
 </body>
