refactor log controller

--- a/application/app/app.html
+++ b/application/app/app.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
 
-                <div ng-if="path == 'log'">
+                <div ng-if="path == 'log'" ng-controller="LogCtrl">
 
                     <div ng-include src="'templates/log.html'"></div>
 
