--- a/application/app/app.html
+++ b/application/app/app.html
@@ -26,11 +26,11 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Scripts loader -->
-    <script src="vendor/LAB.min.js"></script>
+    <script src="js/vendor/LAB.min.js"></script>
 
     <!--Load custom script -->
-    <script src="scripts/frame.js"></script>
-    <script src="scripts/load.js"></script>
+    <script src="js/app/frame.js"></script>
+    <script src="js/app/load.js"></script>
 
 </head>
 
