fixed bug in notification and logger

--- a/application/app/app.html
+++ b/application/app/app.html
@@ -112,9 +112,9 @@
                     </div>
                 </div>
 
-                <div ng-if="path == 'log'" ng-controller="LogCtrl">
+                <div ng-controller="LogCtrl">
 
-                    <div ng-include src="'templates/log.html'"></div>
+                    <div ng-include src="'templates/log.html'" ng-if="path == 'log'" ></div>
 
                 </div>
             </div>
